feat: create base version of discord bot

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "scripts": {
         "start": "node -r ./tsconfig-paths-bootstrap.js dist/index.js",
-        "dev": "set NODE_ENV=development&&node .bin/loadDevEnv.js&& nodemon src/index.ts",
+        "dev": "set NODE_ENV=development&&NODE_ENV=development nodemon src/index.ts",
+        "register": "ts-node .bin/registerDiscordCommands.ts",
         "lint": "eslint . --fix",
         "ts": "tsc --noEmit",
         "build": "rimraf ./dist && npx tsc",
@@ -17,26 +18,30 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
-        "@eslint/js": "^9.17.0",
-        "eslint": "^9.17.0",
-        "globals": "^15.14.0",
-        "typescript-eslint": "^8.19.0",
-        "@typescript-eslint/parser": "^8.19.0",
         "@eslint/eslintrc": "^3.2.0",
+        "@eslint/js": "^9.17.0",
         "@tsconfig/recommended": "^1.0.8",
         "@types/lodash": "^4.17.13",
         "@types/node": "^20.17.7",
         "@typescript-eslint/eslint-plugin": "^8.15.0",
+        "@typescript-eslint/parser": "^8.19.0",
+        "eslint": "^9.17.0",
+        "globals": "^15.14.0",
         "husky": "^9.1.7",
         "lint-staged": "^15.2.10",
         "nodemon": "^3.1.7",
         "prettier": "3.2.5",
         "prettier-plugin-organize-imports": "^3.2.4",
         "ts-node": "^10.9.2",
-        "typescript": "^5.7.2"
+        "typescript": "^5.7.2",
+        "typescript-eslint": "^8.19.0"
     },
     "dependencies": {
+        "axios": "^1.7.9",
+        "bufferutil": "^4.0.9",
+        "discord.js": "^14.17.2",
         "dotenv": "^16.4.5",
+        "i18next": "^24.2.0",
         "lodash": "^4.17.21",
         "ts-node-register": "^1.0.0",
         "tsconfig-paths": "^4.2.0",
